src/styles/puppifications.module.scss
@use "@styles/_theme.module.scss" as Theme;

$componentHeight: 350px;

.container {
  height: $componentHeight; // Two divs prevents the container from collapsing during animation.
}

.iris {
  /* border: 1px solid red; */
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
  overflow: hidden;
  height: $componentHeight;
  width: 100%;
  span,
  button,
  input {
    font-family: inherit;
    text-align: center;
    @include Theme.mediaQuery(Theme.$microViewport) {
      word-break: break-all;
    }
  }
}

@include Theme.woodgrain($wide: true);

.button {
  padding: 1em;
  /* margin: 2rem 1rem; */
  border: none;
  border-radius: Theme.$buttonRadius;
  width: 80%;
  height: max-content;
  cursor: pointer;
  background-color: Theme.$primary;
  color: Theme.$lightPrimary;
  transition: all #{Theme.$transitionShort}s;
  @include Theme.imageHover(Theme.$darkPrimary);
}

.top-line {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  position: relative;
  font-family: inherit;
  font-size: Theme.$h3;
  text-align: center;
}

.envelope-doodle {
  /* margin-top: 1em; */
  opacity: 1;
}

.puppifications {
  font-size: Theme.$h3;
  border-radius: Theme.$bigButtonRadius;
}

.form {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-wrap: wrap;
  width: 100%;
  padding: 9px 1.5em 3.5em 0;
  overflow: hidden;

  input {
    flex: 4;
    padding: 1em;
    margin: 0 1em;
    border: none;
    border-radius: Theme.$buttonRadius;
    background-color: white;
    color: Theme.$darkPrimary;
  }
  button.button[type="submit"] {
    flex: 1;
    padding: 0 1em;
    height: max-content;
    font-weight: 700;
    font-size: 2rem;
  }
  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
    padding-left: 0 1.5em 3.5em 1.5em;
  }
  @include Theme.mediaQuery(Theme.$microViewport) {
    flex-direction: column;
    flex-wrap: nowrap;
    input {
      flex: 1;
      width: 100%;
    }
    button {
      flex: 1;
      width: 100%;
    }
  }
}

@include Theme.mediaQuery(Theme.$microViewport) {
  .envelope-doodle {
    display: none;
  }
  .button,
  .form input,
  .form span {
    font-size: 1rem !important;
    line-height: 2rem;
  }
  .top-line {
    display: none;
  }
}

